--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.0.0"
+    "@solana/web3.js": "^1.0.0",
+    "dotenv": "^16.4.5"
   },
   "keywords": [],
   "author": "",
